bug fixes: search bar, archived employees, employees assignation to task now working properly